# kinetic_lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  format.yml
example/: example_1.cp  main.c
examples/: hello_world.k
include/: ast.h  codegen.h  expression.h  gen.h  lexer.h  token.h
include/assert/: assert.h
include/lexer/: lexer.h  token.h
include/parser/: ast.h  parser.h
src/: ast.c  codegen.c  expression.c  expression.h  gen.c  lexer.c  lexer.h  main.c  token.c
src/lexer/: lexer.c
src/parser/: parser.c
test/: test_expressions.cpp  test_lexer.cpp
test/lexer/: lexer_test.cpp
test/parser/: parser_test.cpp
